--- a/README
+++ b/README
@@ -18,7 +18,7 @@ You might also be interested in the VRLFP Discord: https://discord.gg/
 License
 -------
 
-Copyright (c) 2018 VRLFP
+Copyright (c) 2018 VRLFP, Inc.
 
 Permission to use, copy, modify, and/or distribute this software for any purpose
 with or without fee is hereby granted, provided that the above copyright notice
