added discord to README

--- a/README
+++ b/README
@@ -13,7 +13,7 @@ Contact
 
 For comments, suggestions, bug reports or patches: hello@vrlfp.net
 
-You might also be interested in the VRLFP Discord: https://discord.gg/
+You might also be interested in the VRLFP Discord server: https://discordapp.com/invite/PXsjCx6
 
 License
 -------
